--- a/studyhelper/src/Components/Body/Body.css
+++ b/studyhelper/src/Components/Body/Body.css
@@ -6,7 +6,7 @@
 .about-us {
   margin: 0 auto;
   padding-top: 2em;
-  width: 70%;
+  width: 65%;
   display: flex;
   flex-direction: row;
 }
@@ -16,11 +16,12 @@
 }
 
 .about-us-text h1 {
-  font-size: 2.5em;
+  font-size: 2.2em;
   text-align: center;
 }
 
 .about-us-text p {
+  width: 90%;
   font-size: 1.2em;
   text-align: center;
   color: #5b646d;
@@ -36,14 +37,14 @@
 
 .content-item {
   display: flex;
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding-top: 3em;
+  padding-bottom: 3em;
   justify-content: space-between;
   border-bottom: 1px solid #9199c6;
 }
 
 .content-item div img {
-  width: 25em;
+  width: 26em;
 }
 
 .content-right {
@@ -60,18 +61,42 @@
   width: 40%;
 }
 
+#content-item-text p {
+  color: #5b646d;
+}
+
+#calendar {
+  border-radius: 15px;
+}
+
 footer {
-  height: 4em;
+  padding: 0;
+  margin: 0;
   width: 100%;
   background-color: #a09e9d;
 }
 
 footer ul {
-  padding-top: 1em;
+  padding: 1em 0 1em 1em;
+  margin-bottom: 0em;
 }
 
 footer li {
   display: inline;
   list-style: none;
   padding-right: 2em;
+}
+
+@media (max-width: 991px) {
+  #content-item-text {
+    width: 100%;
+  }
+
+  .about-us img {
+    display: none;
+  }
+
+  .content-item div img {
+    display: none;
+  }
 }
