--- a/studyhelper/src/Pages/components/NavBar/NavBar.css
+++ b/studyhelper/src/Pages/components/NavBar/NavBar.css
@@ -1,4 +1,36 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110, 94, 254), 0%, rgba(73, 63, 253, 1) 100%);
+    background: linear-gradient(90deg, rgb(255, 207, 74), 0%, rgba(255, 207, 74) 100%);
     height: 80px;
+    display: flex;
+    align-items: center;    
+    font-size: 1.2rem;
+}
+
+.fa-react {
+    margin-left: 0.5rem;
+    font-size: 1.6rem;
+}
+
+.nav-menu {
+    font-weight: bold;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 10px;
+    list-style: none;
+    text-align: center;
+    width: 700vw;
+    justify-content: end;
+    margin-right: 2rem;
+}
+
+.nav-links {
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.nav-links:hover {
+    background-color: #f7e26d;
+    border-radius: 4px;
+    transition: all 0.2s, ease-out;
 }
