--- a/studyhelper/src/Components/Body/Body.css
+++ b/studyhelper/src/Components/Body/Body.css
@@ -1,9 +1,9 @@
-.body {
+.body-body {
   width: 100%;
   background-color: #f6f6f6;
 }
 
-.about-us {
+.body-about-us {
   margin: 0 auto;
   padding-top: 2em;
   width: 65%;
@@ -11,23 +11,23 @@
   flex-direction: row;
 }
 
-.about-us img {
+.body-about-us img {
   width: 14em;
 }
 
-.about-us-text h1 {
+.body-about-us-text h1 {
   font-size: 2.2em;
   text-align: center;
 }
 
-.about-us-text p {
+.body-about-us-text p {
   width: 90%;
   font-size: 1.2em;
   text-align: center;
   color: #5b646d;
 }
 
-.content {
+.body-content {
   width: 80%;
   margin: 0 auto;
   font-size: 1.4em;
@@ -35,7 +35,7 @@
   margin-bottom: 5em;
 }
 
-.content-item {
+.body-content-item {
   display: flex;
   padding-top: 3em;
   padding-bottom: 3em;
@@ -43,29 +43,29 @@
   border-bottom: 1px solid #9da2c0;
 }
 
-.content-item div img {
+.body-content-item div img {
   width: 26em;
 }
 
-.content-right {
+.body-content-right {
   flex-direction: row;
 }
 
-.content-left {
+.body-content-left {
   flex-direction: row-reverse;
 }
 
-#content-item-text {
+#body-content-item-text {
   margin-top: auto;
   margin-bottom: auto;
   width: 40%;
 }
 
-#content-item-text p {
+#body-content-item-text p {
   color: #5b646d;
 }
 
-#calendar {
+#body-calendar {
   border-radius: 15px;
 }
 
