--- a/studyhelper/src/Pages/components/NavBar/NavBar.css
+++ b/studyhelper/src/Pages/components/NavBar/NavBar.css
@@ -1,11 +1,19 @@
 .NavbarItems {
+   /*
+    current orange background: 
     background: linear-gradient(90deg, rgb(255, 207, 74), 0%, rgba(255, 207, 74) 100%);
+    */
+    background: linear-gradient(to bottom, rgb(168, 160, 150) 30%, rgb(170, 170, 161));
+    
     height: 80px;
     display: flex;
     align-items: center;    
     font-size: 1.2rem;
 }
 
+.logo {
+    padding-left: 25px;
+}
 .fa-react {
     margin-left: 0.5rem;
     font-size: 1.6rem;
@@ -30,7 +38,7 @@
 }
 
 .nav-links:hover {
-    background-color: #f7e26d;
+    background-color: #615f57;
     border-radius: 4px;
     transition: all 0.2s, ease-out;
 }
