--- a/studyhelper/src/Pages/ContactUs/ContactUs.css
+++ b/studyhelper/src/Pages/ContactUs/ContactUs.css
@@ -17,14 +17,16 @@ button {
   font-family: "Inter", sans-serif;
 }
 
-.app {
+/* .app {
   width: 400px;
   margin: 0 auto;
   height: 100vh;
-}
+} */
 
 /* Contact.js */
 .form {
+  margin: 0 auto;
+  width: 400px;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -37,6 +39,8 @@ button {
 
 .form > input,
 textarea {
+  margin: 0 auto;
+  width: 400px;
   padding: 20px;
   border-radius: 3px;
   /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.137); */
@@ -55,6 +59,8 @@ textarea:focus {
 }
 
 .form > textarea {
+  margin: 0 auto;
+  width: 400px;
   height: 150px;
   max-width: 400px;
   min-height: 100px;
@@ -67,6 +73,8 @@ textarea:focus {
 }
 
 .form > button {
+  margin: 0 auto;
+  width: 400px;
   padding: 20px;
   border: none;
   background-color: rgb(2, 2, 110);
