--- a/studyhelper/src/Components/SearchBar/SearchBar.css
+++ b/studyhelper/src/Components/SearchBar/SearchBar.css
@@ -1,5 +1,9 @@
-.search-view > form > input {
+.search-view {
   width: 40em;
+}
+
+.search-view > form > input {
+  width: 100%;
   height: 4em;
   border-radius: 10px;
   border-style: none;
