--- a/studyhelper/src/Pages/Portal/Portal.css
+++ b/studyhelper/src/Pages/Portal/Portal.css
@@ -14,6 +14,7 @@
 
 .portal-submit {
   display: flex;
+  width: 40em;
 }
 
 .portal-radio {
@@ -25,8 +26,31 @@
   margin-right: 1em;
 }
 
+.portal-radio > div > label {
+  padding-left: 0.3em;
+}
+
 .portal-submit-button {
   margin-top: 1em;
   align-self: flex-end;
   margin-left: auto;
+}
+
+.portal-text-flavor {
+  background-color: #fff;
+  margin: 1em;
+  width: 80em;
+  height: 10em;
+  border-radius: 15px;
+}
+
+.portal-text-frame {
+  border-top: 1px solid #a6a8bf;
+  border-bottom: 1px solid #a6a8bf;
+  width: 95%;
+  height: 85%;
+  position: relative;
+  top: 50%;
+  margin: auto;
+  transform: translate(0, -50%);
 }
