Added dummy summary text & api call. Added dictionary call when clicking on word

--- a/studyhelper/src/Pages/Portal/Portal.css
+++ b/studyhelper/src/Pages/Portal/Portal.css
@@ -1,7 +1,7 @@
 .portal-body {
   background-color: #ffb672;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 4em;
   display: flex;
   flex-direction: column;
@@ -34,61 +34,4 @@
   margin-top: 1em;
   align-self: flex-end;
   margin-left: auto;
-}
-
-.portal-text-flavor {
-  background-color: #fff;
-  margin: 1em;
-  width: 75em;
-  height: 10em;
-  border-radius: 15px;
-}
-
-.portal-text-frame {
-  border-top: 1px solid #a6a8bf;
-  border-bottom: 1px solid #a6a8bf;
-  width: 95%;
-  height: 85%;
-  position: relative;
-  top: 50%;
-  margin: auto;
-  transform: translate(0, -50%);
-  display: flex;
-  justify-content: space-between;
-}
-
-.portal-text-item {
-  display: flex;
-  width: 250px;
-  margin-left: 2em;
-  margin-right: 2em;
-}
-
-.portal-text-item > img {
-  width: 15em;
-}
-
-.portal-text-item > p {
-  width: 40em;
-  transform: translate(0, 20%);
-  margin-left: 1em;
-}
-
-.portal-instruct {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2em;
-  width: 50%;
-}
-
-.portal-instruct-item {
-  display: inherit;
-}
-
-.portal-instruct-item > img {
-  width: 4em;
-}
-
-.portal-instruct-item > p {
-  transform: translate(0, 25%);
 }
