--- a/studyhelper/src/Components/Summary/Summary.css
+++ b/studyhelper/src/Components/Summary/Summary.css
@@ -70,10 +70,42 @@
   margin: 1em auto 0 auto;
 }
 
-.summary-content-item {
-}
-
 .summary-content-item:hover {
   cursor: pointer;
   background-color: yellow;
+}
+
+.summary-container-overlay-show {
+  background-color: rgb(214, 214, 214);
+  transition: background-color 0.4s ease;
+}
+
+.summary-container-overlay-hide {
+  background-color: rgb(255, 255, 255);
+  transition: background-color 0.4s ease;
+}
+
+.portal-dict-popup {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 30em;
+  min-height: 20em;
+  border-radius: 15px;
+  box-shadow: 4px 4px 5px rgba(27, 27, 27, 0.555);
+  background-color: #7dc1e7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.portal-dict-content {
+  width: 90%;
+  color: rgb(255, 255, 255);
+}
+
+.portal-dict-title {
+  margin-top: 5px;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
