--- a/studyhelper/src/Components/Summary/Summary.css
+++ b/studyhelper/src/Components/Summary/Summary.css
@@ -1,5 +1,5 @@
 .summary-container {
-  width: 75%;
+  width: 65%;
   background-color: #fff;
   border-radius: 15px;
   margin-top: 1em;
@@ -69,6 +69,7 @@
 .summary-content-wrapper {
   font-size: 18px;
   width: 90%;
+  height: 100%;
   margin: 1em auto 0 auto;
 }
 
@@ -80,11 +81,13 @@
 .summary-container-overlay-show {
   background-color: rgb(214, 214, 214);
   transition: background-color 0.4s ease;
+  height: 100%;
 }
 
 .summary-container-overlay-hide {
   background-color: rgb(255, 255, 255);
   transition: background-color 0.4s ease;
+  height: 100%;
 }
 
 .portal-dict-popup {
@@ -110,4 +113,10 @@
 .portal-dict-title {
   margin-top: 5px;
   border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.portal-edit-box {
+  font-size: 20px;
+  width: 100%;
+  height: 100%;
 }
