--- a/studyhelper/src/Components/CollectList/CollectList.css
+++ b/studyhelper/src/Components/CollectList/CollectList.css
@@ -6,13 +6,48 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.527);
 }
 
 .collList-header {
   width: 95%;
   font-weight: 500;
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr 1fr 0.5fr;
+  grid-template-columns: 4fr 1fr 1fr 1fr 0.5fr;
   border-bottom: 2px solid black;
   margin-top: 1.5em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+.collList-content {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5em;
+}
+
+.collList-content-wrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr 1fr 0.5fr;
+  text-align: center;
+}
+
+.collList-content-item {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.collList-video > a {
+  text-decoration: none;
+  color: rgb(0, 98, 255);
+  font-weight: 600;
+}
+
+.collList-title > a {
+  text-decoration: none;
+  color: rgb(0, 120, 190);
+  font-weight: 500;
 }
