--- a/studyhelper/src/Pages/NoteCard/NoteCard.css
+++ b/studyhelper/src/Pages/NoteCard/NoteCard.css
@@ -41,10 +41,15 @@
   justify-content: space-between;
   height: 2em;
   margin-top: 0.4em;
+  border-bottom: 1px solid black;
 }
 
 .notes-header-add {
   display: flex;
+}
+
+.notes-header-add > img:hover {
+  cursor: pointer;
 }
 
 .notes-header-add > p {
@@ -53,4 +58,11 @@
 
 .notes-header-add > img {
   height: 70%;
+}
+
+.notes-cards {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
